OPEN - issue WCM-1858: ContentView is broken inside new ACME site http://jira.exoplatform.org/browse/WCM-1858

--- a/web/eXoWCMResources/src/main/webapp/skin/shareSkin/portal/defaultPortal/Stylesheet.css
+++ b/web/eXoWCMResources/src/main/webapp/skin/shareSkin/portal/defaultPortal/Stylesheet.css
@@ -180,3 +180,11 @@ td {
 	float: right;
 	width: 70%; 
 }
+
+/* Quick fix for new dms explorer (until dms 2.5.1 patch) */
+.UIJCRExplorerPortlet .UIJCRExplorer .UIWorkingArea {
+	height:475px;
+}
+.UIJCRExplorerPortlet .UIListView .UIListGrid {
+	height:475px;
+}
